--- a/package.json
+++ b/package.json
@@ -9,30 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^2.0.0",
-    "@heroicons/react": "^2.0.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.48.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/node": "20.11.5",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
     "@vercel/analytics": "^1.1.1",
     "framer-motion": "^10.16.4",
     "next": "14.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
     "resend": "^4.1.1",
-    "typescript": "^5.0.0"
+    "typescript": "5.3.3"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.0",
-    "eslint": "^8.0.0",
+    "autoprefixer": "^10.4.17",
+    "eslint": "8.56.0",
     "eslint-config-next": "14.0.0",
-    "postcss": "^8.0.0",
+    "postcss": "^8.4.33",
     "supabase": "^2.6.8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.4.1"
   }
 }
