--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
 # Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL=your-project-url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
 
 # Resend Configuration
 RESEND_API_KEY=your-resend-api-key
 
 # Email Configuration
 ADMIN_EMAIL=your-admin-email
+DOMAIN=desertskiesaviationaz.com
 SCHOOL_NAME="Desert Skies Aviation" 
