--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
     "@vercel/analytics": "^1.1.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^10.16.4",
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
     "resend": "^4.1.1",
+    "tailwind-merge": "^2.6.0",
     "typescript": "5.3.3"
   },
   "devDependencies": {
